Try to fix .stale-warning on Safari

--- a/styles.css
+++ b/styles.css
@@ -215,15 +215,14 @@ svg {
 }
 
 .stale-warning {
-  display: none;
   color: #000;
+  display: none;
   font-family: 'Poppins', sans-serif;
-  position: absolute;
-  left: 0;
-  top: calc(var(--dim-page-padding) * 0.5);
-  left: var(--dim-page-padding);
-  z-index: 2;
   font-size: 8pt;
+  left: var(--dim-page-padding);
+  position: absolute;
+  top: calc(var(--dim-page-padding) * 0.5);
+  z-index: 2;
 }
 
 @media screen and (max-width: 8.5in) {
